--- a/assign4/README
+++ b/assign4/README
@@ -1,19 +1,65 @@
-Parser for C#
--------------------------------
-Written by: Abhimanyu, Shresth Soni, Shubhojyoti Nath
--------------------------------
+###############################################################################
+A C# Compiler written in C (for MIPS) 
+Authors: Abhimanyu, Shresth Soni, Shubhojyoti Nath
+Group 5
+###############################################################################
 
-1. Building the parser
-    ==> Run "mkdir bin" in assign3 directory
-    ==> Run "make"
-    
-    Parser will be generated in bin directory.
+# Language Features:
+    a.  Data Types - int, bool, char and one dimensional arrays of int, bool and char
+    b.  Operators
+            int:
+                - Unary -> !,-,~,+
+                - Relational ->  <, >, ==, !=
+                - Arithmetic -> +,-,/,%
+                - Bitwise -> <<,>>,&,|,^
+                - Logical ops -> &&,||
+                - Assignment -> = 
+            bool (realized as int 0 and 1):
+                - Unary-> !
+                - Logical -> &&,||
+                - Assignment -> =
+            Arrays:
+            	- Same as int
 
-2. Running the parser
-    ==> Run "./bin/parser ./test/test1.cs" in assign3 directory
+    c.  Loops -> for, while
+    d.  Selection Statements -> if, if-else
+    e.  Multiple Declarations and Sequential Assignments
+        - Multiple Declarations  -> int a,b,c=3;
+        - Sequential Assignments -> a=b=c=3;
+    f.  Arrays -> 1-D arrays of types - {int,char,bool}
+    g.  Classes
+    	- Only one class allowed in the program
+        - Data members can only be of simple or array of simple types.
+    h.  Functions
+        - Allowed return types -> int
+        - Allowed argument types -> int, char, bool
+    i.  Scoping
+    	- Imlemented as a tree of symbol tables
+    j.  boolean expressions realized as integer 0 and 1 wit relational operators
+    k.	pre increment/decrement
+    l.	RECURSION
     
-    This will create "test1.html" in assign3 directory.
 
-3. Cleaning
-    ==> Run "make clean" in assign3 directory.
-    
+# Features not supported:
+    a. structs and enums, pointers
+    b. do while
+    c. float and double type
+    d. multidimensional arrays
+
+
+###############################################################################
+
+TEST FILES
+
+test1.cs : array usage, arithmetical/logical expressions, conditions
+test2.cs : nested loops, for as well as while
+test3.cs : scope of local variables test (k)
+test4.cs : switch
+test5.cs : function parameters
+
+USAGE:
+> make
+> bin/irgen test/test1.cs
+
+To Clean:
+> make clean
