--- a/Compiler/README
+++ b/Compiler/README
@@ -35,10 +35,11 @@ Group 5
         - Allowed argument types -> int, char, bool
     i.  Scoping
     	- Imlemented as a tree of symbol tables
-    j.  boolean expressions realized as integer 0 and 1 wit relational operators
+    j.  boolean expressions realized as integer 0 and 1 with relational operators
     k.	pre increment/decrement
     l.	RECURSION
-    
+    m.  struct
+    n.  type checking
 
 # Features not supported:
     a. pointers and OOP
